# gwsadm-mcp

./: CHANGELOG.md  CLAUDE.md  README.ja.md  README.md  pyproject.toml  release-please-config.json  server.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
gwsadm_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
tests/: test_client.py  test_config.py  test_main.py  test_server.py
